Fix height of test results to prevent layout shift

--- a/src/test-results.css
+++ b/src/test-results.css
@@ -1,5 +1,6 @@
 #test-results {
   margin: 0;
+  min-height: 22px;
   padding: 2px 16px;
   box-shadow: inset 0 -1px 5px #0003;
 }
